--- a/most dominant color.ipynb
+++ b/most dominant color.ipynb
@@ -253,6 +253,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 0,  1,  2,  3,  4,  5,  6,  8, 10, 11, 12, 13, 14]), array([10264, 29948, 10501,  6759,  3118,  6701,  9218,  3653,  6721,\n",
+      "        8366, 10877, 17619, 29855]))\n",
+      "(13,)\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAhIAAACLCAYAAAA0y3AdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAAyRJREFUeJzt2L+Lz3EAx/H3+ZHiJgZKopRbjAz+EDazyZ9juZTBYLHI\nYlGXRcqiSFnoBilFLuKG8zEbzunZ99un6x6P+dP79V4+9ey9Mk3TAAAoDs19AQBg/xISAEAmJACA\nTEgAAJmQAAAyIQEAZEICAMiEBACQCQkAIBMSAEAmJACATEgAAJmQAAAyIQEAZEICAMiOzH2B//Xg\n+Ydpjt2Pm6/Gw3u35pg+cNbvPB1nTp+bZfvb1o9x9/6ThZ555eLmOHtq65/fvPu+Nh59ur6wzUvb\nt8fq77cLO28v569ujWOrO3t+92Jjbbx+eWFhu8/enFzYWbtZvXxjHD6+/J3dnBjvx7WjN2fbX4ad\nnWlsPP4y9zUOhK+ff43tn3//m9M0rSxjy4sEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIA\nyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAA\nADIhAQBkQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJCQAgExIAQCYk\nAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJ\nCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBk\nQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAA\nmZAAADIhAQBkQgIAyIQEAJAJCQAgExIAQCYkAIBMSAAAmZAAADIhAQBkQgIAyIQEAJAJCQAgExIA\nQCYkAIBsZZqmue8AAOxTXiQAgExIAACZkAAAMiEBAGRCAgDIhAQAkAkJACATEgBAJiQAgExIAACZ\nkAAAMiEBAGRCAgDIhAQAkAkJACATEgBAJiQAgExIAACZkAAAMiEBAGRCAgDIhAQAkAkJACATEgBA\nJiQAgExIAACZkAAAMiEBAGRCAgDI/gAJIzcRdo7AUAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f23a83bf9d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Showing percentages of each colour in the picture\n",
+    "\n",
+    "dom_cols = np.unique(labels, return_counts=True)\n",
+    "print dom_cols\n",
+    "lab = dom_cols[0]\n",
+    "print lab.shape\n",
+    "hist = dom_cols[1].astype(\"float\")/dom_cols[1].sum()\n",
+    "\n",
+    "col_sp = np.zeros((100, 500, 3))\n",
+    "\n",
+    "start = 0\n",
+    "for (col, percent) in zip(lab, hist):\n",
+    "    # print percent\n",
+    "    end = int(start + percent*col_sp.shape[1])\n",
+    "    # print end\n",
+    "    col_sp[:, start:end, :] = colors[col]\n",
+    "    start = end\n",
+    "\n",
+    "plt.figure(0)\n",
+    "plt.axis(\"off\")\n",
+    "plt.imshow(col_sp)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
